# nueces-homies-bot

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: pr.yml  push.yml  rust.yml  tools.yml
http/: tmdb.http
src/get-config/: Cargo.toml
src/get-config/src/: main.rs
src/google/: Cargo.toml
src/google/src/: lib.rs
src/igdb/: Cargo.toml  build.rs
src/igdb/protos/: igdbapi.proto
src/igdb/src/: client.rs  errors.rs  lib.rs  query.rs
src/tmdb/: Cargo.toml
src/tmdb/src/: client.rs  errors.rs  lib.rs  model.rs
tools/deploy-agent/: Cargo.toml
tools/deploy-agent/src/: azure.rs  downloader.rs  github.rs  main.rs  unzip.rs  webhook.rs
