[package]
name = "get-config"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
azure_core = "0.16.0"
azure_identity = "0.16.1"
azure_security_keyvault = "0.16.0"
azure_svc_appconfiguration = { version = "0.16.0", features = ["package-2019-07"] }
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }
