[package]
name = "google"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-calendar3 = "5.0.3"
google-books1 = "5.0.3"
serde = "1.0.189"
serde_json = "1.0.107"
yup-oauth2 = "8.3.0"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
base64 = "0.21.4"


