[package]
name = "igdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
prost = "0.12.1"
prost-types = "0.12.1"
reqwest = { version = "0.11.21", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }

[build-dependencies]
prost-build = "0.12.1"
