[package]
name = "tmdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
heapless = { version = "0.7.16", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
serde_with = { version = "3.3.0", features = ["chrono_0_4", "json", "macros"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
